Github adicionado como link no footer

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div>
                 <p class="formacao-texto">
                     Minha experiência acadêmica mais recente é o curso <strong>Técnico em Informática</strong>, que estou cursando no Cedup.
-                    Além disso, procuro me manter sempre atualizado e pretendo ingressar na faculdade de Engenharia de Software ou Ciências da Computação.
+                    Além disso, procuro me manter sempre atualizado e pretendo ingressar na faculdade de Engenharia de Software ou em Análise e Desenvolvimento de Sistemas.
                 </p>
                 <ul class="formacao-lista">
                     <li class="formacao-nome">
@@ -127,7 +127,7 @@
                     <div class="idiomas">
                         <h3>Idiomas</h3>
                         <ul>
-                            <li>Inglês <span>/ Intermediário</span></li>
+                            <li>Inglês <span>/ Basico</span></li>
                             <li>Português <span>/ Nativo</span></li>
                         </ul>
                     </div>
@@ -145,6 +145,7 @@
                 <li><img src="./img/icons8-gmail.svg"><a href="mailto:protectcaio@gmail.com">protectcaio@gmail.com</a></li>
                 <li><img src="./img/icons8-whatsapp.svg"><a href="https://wa.me/+5547992483064">+55 47 99920-4455</a></li>
                 <li><img src="./img/icons8-linkedin.svg"><a href="https://www.linkedin.com/in/caio-onofre">LinkedIn</a></li>
+                <li><img src="./img/icons8-github-100.png"><a href="https://github.com/caioonofre">Github</a></li>
             </ul>
             <p class="footer-copy">Alguns direitos reservados.</p>
         </div>
