--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
     <footer class="footer" id="contato">
         <div class="footer-container">
             <p class="footer-texto">
+                Este site/currículo foi desenvilvido por mim, utilizando html e css!
                 Estou disponível para novos projetos no momento. Entre em contato comigo e podemos marcar uma conversa 👋
             </p>
             <ul class="footer-contato">
