arrumando texto de experiencia

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <h2 class="subtitulo">Experiência</h2>
         <div>
             <p class="experiencia-texto">
-                Desenvolvo pequenos projetos utilizando <strong>HTML, CSS, JavaScript,
-                    banco de dados, Python e mais.</strong> Tenho facilidade com exatas, trabalho muito bem em equipe,
+                Desenvolvo pequenos projetos utilizando <strong> Java, (HTML, CSS), JavaScript,
+                banco de dados, Python e mais.</strong> Tenho facilidade com exatas, trabalho muito bem em equipe,
                 sou bom em gerenciar projetos e estou sempre aprendendo e me atualizando na área.
             </p>
 
