atualizando para graduação

--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     </header>
 
     <main class="container introducao">
-        <img src="./img/foto.jpg" alt="">
         <section>
             <h2>
-                Estudante de TI / Programador
+                Estudante de TI/Programador
             </h2>
             <p>Localizado em Joinville 🌧️</p>
         </section>
@@ -95,19 +94,20 @@
             <h2 class="subtitulo">Formação</h2>
             <div>
                 <p class="formacao-texto">
-                    Minha experiência acadêmica mais recente é o curso <strong>Técnico em Informática</strong>, que estou cursando no Cedup.
-                    Além disso, procuro me manter sempre atualizado e pretendo ingressar na faculdade de Engenharia de Software ou em Análise e Desenvolvimento de Sistemas.
+                    Minha experiência acadêmica mais recente é o curso <strong>Técnico em Informática</strong> que finalizei no Cedup.
+                    Recentemente passei no vestibular para cursar <strong>Sistemas da Informação no Instituto Federal Catarinense(IFC)</strong> e estou atualmente no primeiro semestre.
+                    Além disso, estou cursando Inglês na parte de conversação para que consiga me comunicar com algum time/empresa em outro país, alem de ser muito importante na área.
                 </p>
                 <ul class="formacao-lista">
                     <li class="formacao-nome">
-                        <span class="formacao-nivel">Técnico</span>
-                        <h3 class="formacao-curso">Informática (Cursando)</h3>
-                        <span class="formacao-instituicao">Cedup</span>
+                        <span class="formacao-nivel">Graduação</span>
+                        <h3 class="formacao-curso">Sistemas da Informação<br>(1° semestre)</h3>
+                        <span class="formacao-instituicao">Instituto Federal Catarinense</span>
                     </li>
                     <li class="formacao-nome">
-                        <span class="formacao-nivel">Curso de Aprendizagem</span>
-                        <h3 class="formacao-curso">Administração</h3>
-                        <span class="formacao-instituicao">Senac</span>
+                        <span class="formacao-nivel">Técnico</span>
+                        <h3 class="formacao-curso">Informática</h3>
+                        <span class="formacao-instituicao">Cedup</span>
                     </li>
                     <li class="formacao-nome">
                         <span class="formacao-nivel">Profissionalizante</span>
@@ -119,8 +119,10 @@
                     <div class="cursos">
                         <h3>Outros cursos</h3>
                         <ul>
-                            <li>Introdução à Informática <span>150h</span></li>
-                            <li>Metrologia <span>150h</span></li>
+                            <li>Ingles conversação (Cursando)</li>
+                            <li>Adminstração <span>1600h</span></li>
+                            <li>Introdução à Informática <span>260h</span></li>
+                            <li>Metrologia <span>200h</span></li>
                         </ul>
                     </div>
                     <div class="idiomas">
